--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio_blog",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://nikemman.github.io/portfolio-blog",
+  "homepage": "https://nikemman.github.io/portfolio_blog",
   "type": "module",
   "scripts": {
     "dev": "vite",
